# iot-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend_iot/: __init__.py  __main__.py  api.py  common.py  db.py  views.py
backend_iot/static/: globals.css  style.css
backend_iot/templates/: index.html
